--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
 <body>
     
     <main>
+        <!-- O corpo da calculadora -->
         <section class="calc">
+            <!-- A tela da calculadora -->
             <div class="calc__screen">
                 <input type="text" id="screen" disabled>
             </div>
+            <!-- Buttons e sinais da calculadora -->
             <div class="buttons__sinais">
+                <!-- Buttons da calculadora -->
                 <div class="calc__buttons">
                     <div class="button">
                         <button onclick="Calc('7')">7</button>
@@ -53,6 +57,7 @@
                         <button onclick="Calc('-')" class="pink">-</button>
                     </div>
                 </div>
+                <!-- Sinais da calculadora -->
                 <div class="calc__sinais">
                     <div class="button">
                         <button onclick="Apagar()">&larr;</button>
